--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rumahpcts",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.3.1",
+    "next": "13.0.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.38.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/node": "18.11.5",
-    "@types/react": "18.0.22",
-    "@types/react-dom": "18.0.7",
     "eslint": "8.26.0",
-    "eslint-config-next": "12.3.1",
-    "typescript": "4.8.4"
+    "eslint-config-next": "13.0.1"
   }
 }
