--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^4.24.0",
+    "babel-plugin-import": "^1.13.5",
     "next": "13.0.1",
+    "next-plugin-antd-less": "^1.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
