--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev -p 8080",
+    "build": "next build ",
+    "start": "next start ",
+    "lint": "next lint "
   },
   "dependencies": {
     "antd": "^4.24.0",
     "babel-plugin-import": "^1.13.5",
-    "next": "13.0.1",
+    "next": "12.3.2",
     "next-plugin-antd-less": "^1.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
     "eslint": "8.26.0",
-    "eslint-config-next": "13.0.1"
+    "eslint-config-next": "12.3.2"
   }
 }
