--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8080",
+    "dev": "next dev",
     "build": "next build ",
     "start": "next start ",
     "lint": "next lint "
@@ -14,7 +14,9 @@
     "next": "12.3.2",
     "next-plugin-antd-less": "^1.8.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "superagent": "^8.0.3",
+    "superagent-intercept": "^0.1.2"
   },
   "devDependencies": {
     "eslint": "8.26.0",
