--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint "
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "antd": "^4.24.0",
     "atob": "^2.1.2",
     "babel-plugin-import": "^1.13.5",
+    "mobx": "^6.7.0",
+    "mobx-react-lite": "^3.4.0",
     "next": "12.3.2",
     "next-plugin-antd-less": "^1.8.0",
     "react": "18.2.0",
