--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "antd": "^4.24.0",
     "atob": "^2.1.2",
     "babel-plugin-import": "^1.13.5",
+    "html-to-image": "^1.11.3",
+    "jspdf": "^2.5.1",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
     "next": "12.3.2",
